[package]
name = "rustimization"
version = "0.1.1"
authors = ["noshu <naushad1290@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/noshu/rustimization"
homepage = "https://github.com/noshu/rustimization"
documentation = "https://github.com/noshu/rustimization"
description = """
A rust optimization library which includes L-BFGS-B and Conjugate Gradient algorithm
"""

[dependencies]
libc = "0.2"

[dependencies.lbfgsb-sys]
version = "0.1.0"
features = ["static"]
